nav bar template

--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -1,3 +1,15 @@
+ul
+  li.row
+    a(href='/') Home
+  li.row
+    a(href='/categories') Categories
+  li.row
+    a(href='/inventory') Inventory
+  li.row
+    a(href='/cart') Cart
+  li.row
+    a(href='/account') Account
+
 if session.passport
   span #{session.passport.user.username}
   form(method="POST")
