--- a/views/home.pug
+++ b/views/home.pug
@@ -1,8 +1,8 @@
 extends index.pug
 
 block content
-  h1 Home Page
-  //- each product in products
-  //- h3= product.name
-  //- h2= product.price
-  //-   h4= `Types: ${pastry.types}`
+  h2 Check out our latest 20 products! Buy some ish with your skriz!
+  each product in products
+    h3= product.name
+    h4= product.price
+    p= product.description
