--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,6 @@ extends index.pug
 block content
   h2 Check out our latest 20 products! Buy some ish with your skriz!
   each product in products
-    h3= product.name
+    h3= product.title
     h4= product.price
     p= product.description
