linked working stylesheet

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    include stylesheets.pug
+    style
+      include ../client/css/index.css
     title Bangazon!
   body
     include partials/nav.pug
