--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    include stylesheets.pug
     title Bangazon!
   body
     include partials/nav.pug
@@ -13,3 +14,5 @@ html
 
     script
       include ../client/client.js
+  
+
