--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -1,4 +1,21 @@
+ul
+  li.row
+    input#searchBar(type="text")
+  li.row
+    a(href='/') Home
+  li.row
+    a(href='/categories') Categories
+  li.row
+    a(href='/inventory') Inventory
+  li.row
+    a(href='/cart') Cart
+  li.row
+    a(href='/account') Account
+
 if session.passport
   span #{session.passport.user.username}
   form(method="POST")
     button(type="submit" formaction="/logout") logout
+
+script
+      include ../../client/index.js
