--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -18,4 +18,4 @@ if session.passport
     button(type="submit" formaction="/logout") logout
 
 script
-      include ../../client/index.js
+  include ../../client/search.js
