javascript template running on index template

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,7 +13,6 @@ html
       button#showLogin login
       button#showRegister register
 
-    script
-      include ../client/client.js
+    script(src='client.js')
   
   
