--- a/views/account.pug
+++ b/views/account.pug
@@ -12,5 +12,5 @@ block content
 
   button#editAccount Edit
 
-  script
-    include ../client/account.js
+block scripts
+  script(src='js/account.js')
