number of prods added to category title

--- a/views/category-products.pug
+++ b/views/category-products.pug
@@ -9,4 +9,4 @@ block content
                 h3 #{prod.title}
             ul
                 li $#{prod.price}
-                li Quanity Available: #{prod.quantity}
+                li Quantity Available: #{prod.quantity}
