--- a/views/categories.pug
+++ b/views/categories.pug
@@ -4,7 +4,7 @@ block content
   #categories
     each type, i in allTypes
         .productType(productID=type.id)
-            h2 #{type.name}
+            h2 #{type.name} (#{type.total_products})
             ul
                 each product in type.Products
                     li #{product.title}
