--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -3,19 +3,23 @@ ul
     a(href='/') Home
   li.row
     a(href='/categories') Categories
+  li.row
+    a(href='/account') Account
   if session.passport
     li.row
       a(href='/inventory') Inventory
-  li.row
-    a(href='/cart') Cart
-  li.row
-    a(href='/account') Account
-  li.row
-    a(href='/login') Login
-  li.row
-    a(href='/register') Register
+    li.row
+      a(href='/cart') Cart
+    li.row
+      form(method="POST")
+        button(type='submit' formaction='/logout') Logout
+  else
+    li.row
+      a(href='/login') Login
+    li.row
+      a(href='/register') Register
 
 if session.passport
   span #{session.passport.user.username}
-  form(method="POST")
-    button(type="submit" formaction="/logout") logout
+//-   form(method="POST")
+//-     button(type="submit" formaction="/logout") logout
