readme, script errors

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,10 +10,12 @@ html
     h2 #{globalWow}
 
     block content
-      button#showLogin login
-      button#showRegister register
+      //- button#showLogin login
+      //- button#showRegister register
     
     block scripts
-      script(src='js/client.js')
+      
+  
+  
   
   
