--- a/views/category-products.pug
+++ b/views/category-products.pug
@@ -10,3 +10,7 @@ block content
             ul
                 li $#{prod.price}
                 li Quantity Available: #{prod.quantity}
+
+block scripts
+    script(src='/js/categories.js')
+    script(src='/js/search.js')
