--- a/views/productDetails.pug
+++ b/views/productDetails.pug
@@ -7,4 +7,6 @@ block content
     p $#{price}
     p #{quantity} left in stock
     button.addToOrder Add to cart
-      
+    
+block scripts
+  script(src='/js/search.js')
