--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -24,5 +24,5 @@ if session.passport
 
 block scripts
     script(src='js/categories.js')
-    //- script(src='js/search.js')
+    script(src='js/search.js')
 
