add product form rendered to .../inventory/add

--- a/views/partials/nav.pug
+++ b/views/partials/nav.pug
@@ -9,6 +9,8 @@ ul
     li.row
       a(href='/inventory') Inventory
     li.row
+      a(href='/inventory/add') Sell a Product
+    li.row
       a(href='/cart') Cart
     li.row
       form(method="POST")
