Add payment type option to account.

--- a/views/account.pug
+++ b/views/account.pug
@@ -12,5 +12,9 @@ block content
 
   button#editAccount Edit
 
+  #paymentType
+    h2 Payment Types
+    button#addPaymentType Add Payment Type
+
 block scripts
   script(src='js/account.js')
