Add delete payment type.

--- a/views/account.pug
+++ b/views/account.pug
@@ -14,6 +14,14 @@ block content
 
   #paymentType
     h2 Payment Types
+    ol Payment Types
+      each type, index in paymentTypes
+        li(id=index)
+          #paymentType
+            .provider= type.provider
+            .account-number= type.account_number
+            button(id=type.id).deletePaymentType Delete
+
     button#addPaymentType Add Payment Type
 
 block scripts
