fetch posting to database

--- a/views/product-form.pug
+++ b/views/product-form.pug
@@ -27,7 +27,7 @@ block content
                     option(value=prodType.id) #{prodType.name}
             span.errAsterisk
     .productSubmit
-        input#addProductButton(type='submit' value='add product')
+        input#addProductButton(type='submit')
     #productFormError
 
 block scripts
