--- a/views/product-form.pug
+++ b/views/product-form.pug
@@ -9,7 +9,7 @@ block content
             span.errAsterisk
         .productInput
             label(for='price') Price
-            input(prop='price' name='price' type='text')
+            input(prop='price' name='price' type='text' pattern='[0-9]')
             span.errAsterisk
         .productInput
             label(for='description') Description
