--- a/views/index.pug
+++ b/views/index.pug
@@ -13,6 +13,7 @@ html
       //- button#showLogin login
       //- button#showRegister register
     
+    script(src='js/search.js')
     block scripts
       
   
