--- a/views/accountEdit.pug
+++ b/views/accountEdit.pug
@@ -12,4 +12,5 @@ block content
     input(type="text" value=phone_number name="phone_number")
 
     button#saveAccount(type="submit") Save
-
+block scripts
+      script(src='/js/categories.js')
