--- a/views/cart.pug
+++ b/views/cart.pug
@@ -3,9 +3,14 @@ extends index.pug
 block content
   h1 Your Cart
   h3 WOOOO!
+  if products.length
     each product in products
       a(href=`/products/${product.id}`)
         h3.cartProductTitle= product.title
       span.price= `$${product.price}`
     h2 Total = $#{orderTotal}
+    form(method='POST', action=`/cart/all?_method=DELETE&id=${order.id}`)
+      button(type='submit') Clear Cart
+  else 
+    p no products
         
