fixed empty cart error

--- a/views/cart.pug
+++ b/views/cart.pug
@@ -4,7 +4,7 @@ block content
   h1 Your Cart
   h3 WOOOO!
 
-    if !products
+    if !order
       h3 Your cart is empty chump. Waiting on that paycheck?
     else if products
       each product in products
